# geojsonto3D

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.py
.github/workflows/: tests.yml
data/: LICENSE_DATA.md  country_name_mapping.json
res/: weather_hex_globe_subdiv_3.mapping.json  weather_hex_globe_subdiv_5.mapping.json  weather_hex_globe_subdiv_6.mapping.json
src/: blender_runner.py  geo_utils.py  hex_run.py  run.py
tests/: __init__.py  test_blender_runner.py  test_geo_utils.py  test_integration.py
