[project]
name = "geojsonto3d"
version = "1.2.0"
description = "Convert GeoJSON geographic data into 3D globe models using Blender"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Martin Baud", email = "martin@aeryflux.com" },
]
keywords = ["geojson", "3d", "globe", "blender", "gltf"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
]

[project.urls]
Homepage = "https://github.com/martinbaud/geojsonto3D"
Demo = "https://aeryflux.github.io/globe-demo/"
Issues = "https://github.com/martinbaud/geojsonto3D/issues"

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]
